# xpic_copy_30_12_2025

./: CMakeLists.txt  run-tests.sh
src/: constants.h  main.cpp  pch.h
src/algorithms/: drift_kinetic_implicit.cpp  drift_kinetic_implicit.h  drift_kinetic_push.cpp  drift_kinetic_push.h  implicit_drift_kinetic.cpp  implicit_drift_kinetic.h
src/commands/: inject_particles.h  set_magnetic_field.cpp  set_magnetic_field.h  set_particles.cpp  set_particles.h
src/diagnostics/: charge_conservation.cpp  charge_conservation.h  distribution_moment.cpp  distribution_moment.h  energy.cpp  energy.h  field_view.cpp  field_view.h  field_view_zavg.cpp  field_view_zavg.h  momentum_conservation.h  simulation_backup.cpp  table_diagnostic.cpp  table_diagnostic.h  velocity_distribution.cpp
src/interfaces/: builder.cpp  builder.h  diagnostic.cpp  diagnostic.h  particles.cpp  particles.h  point.cpp  point.h  (+2 more)
tests/: CMakeLists.txt  common.h
tests/drift_kinetic/: CMakeLists.txt  drift_kinetic_alfen_ex1.cpp  drift_kinetic_ex1.cpp  drift_kinetic_ex2.cpp  drift_kinetic_mirror_ex1.cpp  drift_kinetic_push.h  drift_kinetic_push_ex1.cpp  drift_kinetic_push_ex2.cpp  drift_kinetic_push_ex3.cpp  drift_kinetic_push_ex3_comparison.py  drift_kinetic_sound_ex1.cpp  plot_drift_kinetic_ex1.py
tests/drift_kinetic/drift_kinetic_visualizations/: plot_density_planes_center.py  plot_dw_linear_fit.py  plot_en.py  plot_energy_component_sums.py  plot_field_centerline.py  plot_field_planes_3x3.py  plot_mean_velocity_planes_center.py  plot_particle_trace.py  plot_traces.py  run_all_visualizations.sh
(+64 files in other folders)
